# News-Management-System-GUI-Using-Qt

./: README.md
News Mangement System GUI/: CMakeLists.txt  adminregister.cpp  adminregister.h  adminwidget.cpp  adminwidget.h  loadandstore.cpp  loginpage.cpp  main.cpp  news.csv  registerpage.cpp  registerpage.h  sortedlinkedlist.cpp  userWidget.cpp  userWidget.h  users.csv
NewsGUI/: CMakeLists.txt  adminregister.cpp  adminregister.h  adminwidget.cpp  adminwidget.h  loadandstore.cpp  loadandstore.h  loginpage.cpp  loginpage.h  main.cpp  news.csv  registerpage.cpp  registerpage.h  sortedlinkedlist.h  userWidget.cpp  userWidget.h  users.csv
NewsGUI/data/: news.csv  users.csv
